--- a/src/styles/typography.module.sass
+++ b/src/styles/typography.module.sass
@@ -28,7 +28,24 @@
 
 .li
     margin-left: 2rem
+      /*
+      FROM _type.scss, line 110:
 
+.blockquote 
+    backgroundColor: hex2rgba('#ffe564', 0.3)
+    borderLeftColor: colors.note
+    borderLeftWidth: 9
+    borderLeftStyle: 'solid'
+    padding: '20px 45px 20px 26px'
+    marginBottom: 30
+    marginTop: 20
+    marginLeft: -30
+    marginRight: -30
+
+    [media.lessThan('small')]: 
+      marginLeft: -20
+      marginRight: -20
+    
 .code
     background: var(--color-background-code)
     padding: 2px 5px
