--- a/src/styles/typography.module.sass
+++ b/src/styles/typography.module.sass
@@ -32,8 +32,7 @@
       FROM _type.scss, line 110:
 
 .blockquote 
-    backgroundColor: hex2rgba('#ffe564', 0.3)
-    borderLeftColor: colors.note
+    backgroundColor: #ffe564
     borderLeftWidth: 9
     borderLeftStyle: 'solid'
     padding: '20px 45px 20px 26px'
@@ -42,10 +41,6 @@
     marginLeft: -30
     marginRight: -30
 
-    [media.lessThan('small')]: 
-      marginLeft: -20
-      marginRight: -20
-    
 .code
     background: var(--color-background-code)
     padding: 2px 5px
