--- a/src/styles/typography.module.sass
+++ b/src/styles/typography.module.sass
@@ -29,15 +29,9 @@
 .li
     margin-left: 2rem
 
-.blockquote 
-    backgroundColor: #ffe564
-    borderLeftWidth: 9
-    borderLeftStyle: 'solid'
+blockquote 
+    background: #ffe564
     padding: '20px 45px 20px 26px'
-    marginBottom: 30
-    marginTop: 20
-    marginLeft: -30
-    marginRight: -30
 
 .code
     background: var(--color-background-code)
