--- a/src/styles/typography.module.sass
+++ b/src/styles/typography.module.sass
@@ -31,7 +31,7 @@
 
 .blockquote 
     background: #ffe564
-    padding: '20px 45px 20px 26px'
+    padding: 20px 45px 20px 26px
 
 .code
     background: var(--color-background-code)
