--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -56,7 +56,19 @@ sub
     bottom: -0.15em
     
 blockquote 
-    background: #ffe564
+  backgroundColor: hex2rgba('#ffe564', 0.3)
+  borderLeftColor: colors.note
+  borderLeftWidth: 9
+  borderLeftStyle: 'solid'
+  padding: '20px 45px 20px 26px'
+  marginBottom: 30
+  marginTop: 20
+  marginLeft: -30
+  marginRight: -30
+  
+  [media.lessThan('small')]: 
+    marginLeft: -20
+    marginRight: -20
 
 img
     border: 0
