--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -57,7 +57,7 @@ sub
     
 blockquote 
   backgroundColor: hex2rgba('#ffe564', 0.3)
-  borderLeftColor: colors.note
+  borderLeftColor: #ffe564
   borderLeftWidth: 9
   borderLeftStyle: 'solid'
   padding: '20px 45px 20px 26px'
