--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -56,15 +56,10 @@ sub
     bottom: -0.15em
     
 blockquote 
-  backgroundColor: hex2rgba('#ffe564', 0.3)
-  borderLeftColor: #ffe564
-  borderLeftWidth: 9
-  borderLeftStyle: 'solid'
-  padding: '20px 45px 20px 26px'
-  marginBottom: 30
-  marginTop: 20
-  marginLeft: -30
-  marginRight: -30
+  background: #ffe564
+  border-left: 10px solid #ccc
+  margin: 1.5em 10px
+  padding: 0.5em 10px
 
 img
     border: 0
