--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -56,8 +56,8 @@ sub
     bottom: -0.15em
     
 blockquote 
-  background: #ffe564
-  border-left: 10px solid #ccc
+  background: RGBA(243,251,1,0.4)
+  border-left: 10px solid #f3fb01
   margin: 1.5em 10px
   padding: 0.5em 10px
 
@@ -97,7 +97,7 @@ table
         vertical-align: top
         padding: 0.5rem
         border-bottom: 1px solid var(--color-subtle-medium)
-
+    
     code
         white-space: nowrap
 
@@ -126,7 +126,7 @@ body
     background: var(--color-back)
 
 p
-    margin-bottom: 3rem
+    margin-bottom: 2rem
 
 ::selection
     background: var(--color-theme)
@@ -158,32 +158,32 @@ pre code
 
     .CodeMirror-line
         padding: 0
-
+    
     .CodeMirror-selected
         background: var(--syntax-selected-background)
-
+    
     .CodeMirror-cursor
         border-left-color: currentColor
-
+    
     .cm-variable-2
         color: inherit
         font-style: italic
-
+    
     .cm-comment
         color: var(--syntax-comment)
-
+    
     .cm-keyword, .cm-builtin
         color: var(--syntax-keyword)
-
+    
     .cm-operator
         color: var(--syntax-operator)
-
+    
     .cm-string
         color: var(--syntax-selector)
-
+    
     .cm-number
         color: var(--syntax-number)
-
+    
     .cm-def
         color: var(--syntax-function)
 
@@ -193,7 +193,7 @@ pre code
 
     .ansi-green-fg.ansi-green-fg
         color: var(--ansi-green)
-
+    
     .ansi-red-fg.ansi-red-fg
         color: var(--ansi-red)
 
