--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -56,8 +56,8 @@ sub
     bottom: -0.15em
     
 blockquote 
-  background: RGBA(243,251,1,0.4)
-  border-left: 10px solid #f3fb01
+  background: RGBA(243,251,1,0.2)
+  border-left: 10px RGBA(243,251,1,0.6)
   margin: 1.5em 10px
   padding: 0.5em 10px
 
