--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -56,9 +56,9 @@ sub
     bottom: -0.15em
     
 blockquote 
-  background: RGBA(243,251,1,0.2)
-  border-left: 10px RGBA(243,251,1,0.6)
-  margin: 1.5em 10px
+  background: RGBA(249,253,63,0.34)
+  border-left: 7px solid RGBA(243,251,1,0.6)
+  margin: 1.0em 10px
   padding: 0.5em 10px
 
 img
@@ -126,7 +126,7 @@ body
     background: var(--color-back)
 
 p
-    margin-bottom: 2rem
+    margin-bottom: 1.5rem
 
 ::selection
     background: var(--color-theme)
