--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -126,7 +126,8 @@ body
     background: var(--color-back)
 
 p
-    margin-bottom: 2.2rem
+    margin-top: 1.4rem
+    margin-bottom: 1.5rem
 
 ::selection
     background: var(--color-theme)
