--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -135,14 +135,14 @@ p
 
 /* Code */
 
-pre, code
+code
     font-family: var(--font-code)
     font-weight: 500
     font-size: 1.25rem
     line-height: var(--line-height)
 
-pre
-    margin-bottom: 3rem
+/*pre
+    margin-bottom: 3rem */
 
 pre code
     display: block
