--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -144,9 +144,9 @@ code
 /*pre
     margin-bottom: 3rem */
 
-pre code
+/*pre code
     display: block
-    padding: 2rem !important
+    padding: 2rem !important */
 
 /* Syntax highlighting */
 
