--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -141,12 +141,12 @@ code
     font-size: 1.25rem
     line-height: var(--line-height)
 
-/*pre
+pre
     margin-bottom: 3rem */
 
-/*pre code
+pre code
     display: block
-    padding: 2rem !important */
+    padding: 2rem !important
 
 /* Syntax highlighting */
 
