--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -142,7 +142,7 @@ code
     line-height: var(--line-height)
 
 pre
-    margin-bottom: 3rem */
+    margin-bottom: 3rem
 
 pre code
     display: block
